--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ html, body {
     display: grid; 
     width: 100vw; 
     height: 100vh; 
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: max(250px, 25%) 1fr;
     grid-template-rows: 150px 1fr;
     padding: 0; 
     margin: 0; 
@@ -42,3 +42,5 @@ html, body {
     width: 100%;
     height: 100%; 
 }
+
+
