--- a/style.css
+++ b/style.css
@@ -1,3 +1,83 @@
+/* 
+ROBOTO FONT 
+*/ 
+
+.roboto-thin {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: normal;
+  }
+  
+  .roboto-light {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .roboto-regular {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .roboto-medium {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .roboto-bold {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+  
+  .roboto-black {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: normal;
+  }
+  
+  .roboto-thin-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 100;
+    font-style: italic;
+  }
+  
+  .roboto-light-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 300;
+    font-style: italic;
+  }
+  
+  .roboto-regular-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+  
+  .roboto-medium-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-style: italic;
+  }
+  
+  .roboto-bold-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 700;
+    font-style: italic;
+  }
+  
+  .roboto-black-italic {
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-style: italic;
+  }
+  
+/* 
+WEBPAGE STYLING
+*/ 
+
 * {
     margin: 0;
     padding: 0;
@@ -9,6 +89,7 @@ html, body {
     height: 100vh;
     margin: 0;
     padding: 0;
+    font-family: "Roboto", 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .container {
@@ -22,11 +103,14 @@ html, body {
 }
 
 .dashboard {
-    background-color: #0ea5e9;
+    background-color: #0284c7;
     width: 100vw; 
     height: 100vh; 
     grid-row-start: 1; 
     grid-row-end: 3;
+    color: white; 
+    padding-left: 15px; 
+    padding-top: 15px; 
 }
 
 .top_bar {
@@ -41,6 +125,23 @@ html, body {
     background-color: #d8e7f2;
     width: 100%;
     height: 100%; 
+}
+
+.dashboard .header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: large;
+}
+
+.dashboard .pages, .dashboard .manage {
+  padding-top: 20px; 
+  padding-bottom: 20px; 
+}
+
+.dashboard h4 {
+  margin-top: 20px; 
+  font-size: medium;
 }
 
 
