--- a/style.css
+++ b/style.css
@@ -122,9 +122,9 @@ html, body {
 }
 
 .content {
-    background-color: #d8e7f2;
-    width: 100%;
-    height: 100%; 
+  background-color: #d8e7f2;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
 }
 
 .dashboard .header {
@@ -134,14 +134,25 @@ html, body {
   font-size: large;
 }
 
+.dashboard h3 {
+  margin-left: 10px; 
+}
+
 .dashboard .pages, .dashboard .manage {
   padding-top: 20px; 
   padding-bottom: 20px; 
 }
 
 .dashboard h4 {
-  margin-top: 20px; 
+  margin: 15px; 
   font-size: medium;
+  margin-left: 20px; 
+}
+
+.dashboard .set {
+  display: flex;
+  align-items: center;
+  padding-left: 12px; 
 }
 
 
