--- a/style.css
+++ b/style.css
@@ -257,3 +257,33 @@ html, body {
     display: none; 
   }
 }
+
+.content {
+  display: flex;
+  flex-direction: row;
+  padding: 20px; 
+  padding-top: 30px; 
+}
+
+.content .projects .overview {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  overflow: scroll; 
+  height: calc(100vh - 220px); 
+}
+
+.projects h4 {
+  font-weight: 500; 
+}
+
+.projects button {
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  margin: 20px; 
+  margin-left: 0; 
+  margin-bottom: 0;
+  padding: 20px; 
+  text-align: left;
+}
