--- a/style.css
+++ b/style.css
@@ -274,7 +274,7 @@ html, body {
   height: calc(100vh - 240px); 
 }
 
-.projects h4 {
+.content h4 {
   font-weight: 500; 
   margin-bottom: 20px;
 }
@@ -316,3 +316,48 @@ html, body {
 .overview button .options object {
   margin-left: 15px; 
 }
+
+.updates {
+  display: flex;
+  flex-direction: column;
+  width: 500px; 
+}
+
+/* Adjust search area for small screens */
+@media (max-width: 1100px) {
+  .updates {
+    display: none; 
+  }
+}
+
+.updates .notices {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  padding: 15px; 
+  border-radius: 8px;
+} 
+
+.updates .notices h6 {
+  font-size: small;
+}
+
+.updates .notices p {
+  color: rgb(110, 110, 112); 
+  font-size: x-small; 
+}
+
+.updates .notices .notice1, .updates .notices .notice2 {
+  border-bottom: 1px solid rgb(110, 110, 112); 
+}
+
+.notices .notice1, .notices .notice2, .notices .notice3 {
+  padding: 10px; 
+}
+
+.updates {
+  overflow: scroll; 
+  height: calc(100vh - 240px); 
+}
+
+
